# vosk_ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
action/: STT.action
launch/: vosk.launch.py  vosk_telegram.launch.py
msg/: GrammarConfig.msg  Transcription.msg
src/: vosk_node.py
